# UniversityCAD

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc  styles.qss
core/: Camera.cpp  Camera.h  Enums.h  Scene.cpp  Scene.h
core/objects/: Object.h  Point.cpp  Point.h  Segment.cpp  Segment.h
draw/: Draw.h  SegmentDraw.cpp  SegmentDraw.h
ui/: CadWindow.cpp  CadWindow.h
ui/windows/: ContextMenu.cpp  ContextMenu.h  Control.cpp  Control.h  Properties.cpp  Properties.h  Viewport.cpp  Viewport.h
